added jacoco test coverage to the application